--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        *, *::after, *::before{
+            box-sizing: border-box;
+        }
+        body{
+            margin:0;
+            background-color: var(--background-color );
+        }
+    </style>
 </head>
 <body>
     <div id="app"></div>
